ensure 'Not supported' cell value never wraps

--- a/frontend/components/NotSupported/_styles.scss
+++ b/frontend/components/NotSupported/_styles.scss
@@ -1,3 +1,4 @@
 .not-supported {
   color: $ui-fleet-black-50;
+  white-space: nowrap;
 }
